# ScheduleAppFrontend

./: .gitignore  .metadata  README.md  package-lock.json
ProductWeb/: .gitignore  .impeccable.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ProductWeb/src/: App.tsx  index.css
SchedulePCagent/: .env.example  .gitignore  Cargo.toml  README.md  index.html  landing.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
SchedulePCagent/crates/harness-cli/: Cargo.toml
SchedulePCagent/crates/harness-cli/src/: main.rs
SchedulePCagent/crates/harness-core/: Cargo.toml
SchedulePCagent/crates/harness-core/src/: clipboard.rs  error.rs  event.rs  foreground.rs  lib.rs  recording.rs  store.rs
SchedulePCagent/src-tauri/: Cargo.toml  tauri.conf.json
SchedulePCagent/src-tauri/capabilities/: default.json
SchedulePCagent/src-tauri/src/: ark.rs  lib.rs  main.rs
admin-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: BACKEND_INTEGRATION_PLAN.md  CURSOR_INSTRUCTIONS_STAGE_3.md  FONT_MIGRATION.md  FONT_REPLACEMENT_GUIDE.md  MIGRATION_PLAN.md  REFACTORING_GUIDE.md  iOS与Flutter快速对应表.md  iOS与Flutter项目文件对应关系.md  按钮图标逻辑说明.md  推送到GitHub步骤.md
init_ui_sandbox/: README.md  pubspec.yaml
lib/: main.dart
schedule_app_flutter/: .gitignore  ASSETS_VERIFICATION_REPORT.md  analyze_output.txt  for_backend  pubspec.yaml
schedule_backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
schedule_backend/alembic/: env.py
schedule_backend/alembic/versions/: 001_init_users_chat_preferences.py  002_add_usage_logs.py  003_usage_logs_conversation.py  004_schedule_tasks.py  005_usage_logs_llm_raw.py
schedule_backend/app/: __init__.py  config.py  main.py
schedule_backend/app/db/: __init__.py  models.py  seed.py  session.py
schedule_backend/app/repositories/: __init__.py  schedule_repository.py  usage_repository.py  user_repository.py
schedule_backend/app/routers/: __init__.py  admin.py  ai.py  schedules.py
schedule_backend/app/services/: ai_service.py  llm_log_utils.py  schedule_ai.py
schedule_backend/docs/: AI日程与群聊设计说明.md  API接口文档.md  README.md  如何运行后端.md  移动端对接指南.md
schedule_backend/scripts/: create_db.py  init_db.py  seed.py  test_api.py
schedule_backend/static/admin/: index.html
schedule_backend/static/admin/assets/: index-B6zVr00i.js  index-FzM_hC1G.css
(+180 files in other folders)
