[package]
name = "schedule-pc-agent"
version = "0.1.0"
description = "Schedule desktop harness (Tauri)"
edition = "2021"

[lib]
name = "schedule_pc_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harness-core = { path = "../crates/harness-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
