[package]
name = "harness-cli"
version = "0.1.0"
edition = "2021"
description = "Debug CLI for Schedule desktop harness"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
